@@ -445,10 +445,11 @@ command_process_destroy_cell(cell_t *cell, or_connection_t *conn)
   }
 }
 
-/** Process a 'versions' cell.  The current link protocol version must be 0 to
- * indicate that no version has yet been negotiated.  We compare the versions
- * cell to the list of versions we support, pick the highest version we have
- * in common, and continue the negotiation from there.
+/** Process a 'versions' cell.  The current link protocol version must be 0
+ * to indicate that no version has yet been negotiated.  We compare the
+ * versions in the cell to the list of versions we support, pick the
+ * highest version we have in common, and continue the negotiation from
+ * there.
  */
 static void
 command_process_versions_cell(var_cell_t *cell, or_connection_t *conn)
